[project]
name = "fobser-data-analysis"
version = "0.1.0"
description = "Data exploration and analysis from Fosber"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.5",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
